force-app/main/default/objects/sugati__Client_Group__c/sugati__Client_Group__c.object-meta.xml
<CustomObject>
    <label>Client Group</label>
    <nameField>
        <label>Client Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>