force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non-Lead Bookings</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>