force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Age__c</fullName>
    <description>Completed by trigger. Only contains value if there is a single group member.</description>
    <inlineHelpText>Only contains value if there is a single group member.</inlineHelpText>
    <label>Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>