force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Arrival_Presents__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Arrival_Presents__c</fullName>
    <label>Arrival Presents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>