force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>