force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Deposit_Required_II__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Deposit_Required_II__c</fullName>
    <label>Deposit Required II</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>