force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Display_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Display_Price__c</fullName>
    <label>Display Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>