force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Exchange_Rate_GBP__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Exchange_Rate_GBP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate GBP</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Client Groups</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>