force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Extras_Bought__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Extras_Bought__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a supplement/extra/bolt on added to this client group?</description>
    <inlineHelpText>Is a supplement/extra/bolt on added to this client group?</inlineHelpText>
    <label>Extras Bought?</label>
    <type>Checkbox</type>
</CustomField>