force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Gender__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Gender__c</fullName>
    <description>Completed by trigger. Only contains value if there is a single group member.</description>
    <inlineHelpText>Only contains value if there is a single group member.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>