force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Is_Dummy__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Is_Dummy__c</fullName>
    <formula>$Label.sugati__GroupBooking == sugati__CG_Lead_Group_Member__r.sugati__GM_Contact__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Dummy</label>
    <type>Checkbox</type>
</CustomField>