force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Lead_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Lead_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipLabel>Client Groups</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>