force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Nationality__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Nationality__c</fullName>
    <description>Completed by trigger. Only contains value if there is a single group member.</description>
    <inlineHelpText>Only contains value if there is a single group member.</inlineHelpText>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>