force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Non_Travelling_Lead_Booker__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Non_Travelling_Lead_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked during tour setup to specify that this is a non-travelling lead booker (while the booking status is &apos;In Progress&apos;)</description>
    <label>Non-Travelling Lead Booker</label>
    <type>Checkbox</type>
</CustomField>