force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Client Groups</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>