force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Order__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>