force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Order_In_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Order_In_HE__c</fullName>
    <label>Order In HE</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>