force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Outstanding_Balance__c</fullName>
    <formula>IF(
ISBLANK(sugati__CG_Selling_Price__c),
sugati__S_CG_Total_Group_Net_Sell_Price__c - IF(ISBLANK(sugati__CG_Total_Amount_Paid_in_Booking_Currency__c), 0, sugati__CG_Total_Amount_Paid_in_Booking_Currency__c),
sugati__CG_Selling_Price__c - IF(ISBLANK(sugati__CG_Total_Amount_Paid_in_Booking_Currency__c), 0, sugati__CG_Total_Amount_Paid_in_Booking_Currency__c)
)</formula>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>