force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_PDF_Quotation__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_PDF_Quotation__c</fullName>
    <label>PDF Quotation Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>