force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Percent_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Percent_Value__c</fullName>
    <label>Percent/Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>