force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Processed_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Processed_On__c</fullName>
    <label>Processed On</label>
    <type>Date</type>
</CustomField>