force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_Agent_Commission_SC__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_Agent_Commission_SC__c</fullName>
    <label>Total Agent Commission SC</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Agent_Commission_Value_SC__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Exclude_From_RSP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Client_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>