force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_Child_Members__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_Child_Members__c</fullName>
    <label>Total Child Members</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>