force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_cost_in_selling_currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_cost_in_selling_currency__c</fullName>
    <label>Total cost in selling currency</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Total_Net_CostSC__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Exclude_From_RSP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__S_SC_Client_Group_Booking_Status__c</field>
        <operation>equals</operation>
        <value>Booked,On Request,Waiting List,</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Client_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>