force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_Extra_Cost_in_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_Extra_Cost_in_Booking_Currency__c</fullName>
    <description>Updated in TourCalculationService2.cls</description>
    <label>Total Extra Price in Booking Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>