force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_Infant_Members__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_Infant_Members__c</fullName>
    <label>Total Infant Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>