force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Total_Tour_Cost_in_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Total_Tour_Cost_in_Booking_Currency__c</fullName>
    <description>Note: Using ABS(S_CG_Total_Discount__c) in case discounts in the future come in as positive rather than negative. We calculate the absolute value and then reduce it.</description>
    <formula>sugati__S_CG_Tour_Price_Per_Person__c + sugati__CG_Total_Extra_Cost_in_Booking_Currency__c - ABS(sugati__S_CG_Total_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tour Price in Booking Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>