force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Tour_Extra_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Tour_Extra_Cancellation_Amount__c</fullName>
    <label>Tour Extra Cancellation Amount</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Tour_Extra_Cancellation_Amount__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Client_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>