force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__CG_Tour_Price_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CG_Tour_Price_Cancellation_Amount__c</fullName>
    <label>Tour Price Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>