force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__Cost_Autofill__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cost_Autofill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Autofill</label>
    <type>Checkbox</type>
</CustomField>