force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__Recommended_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__Recommended_Selling_Price__c</fullName>
    <description>(CG_Recommended_Selling_Price_Rp__c + (CG_FX_Transfer_Charges__c+ CG_Arrival_Presents__c+ CG_Charity__c + CG_Regulatory_Charges__c ))*(1+ CG_Opportunity__r.O_Target_Mark_Up_Value__c/100 )</description>
    <formula>(sugati__CG_Recommended_Selling_Price_Rp__c)+(sugati__CG_FX_Transfer_Charges__c+ sugati__CG_Arrival_Presents__c+ sugati__CG_Charity__c + sugati__CG_Regulatory_Charges__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(CG_Recommended_Selling_Price_Rp__c)*(1+ CG_Opportunity__r.O_Target_Mark_Up_Value__c/100 )*(CG_FX_Transfer_Charges__c+ CG_Arrival_Presents__c+ CG_Charity__c + CG_Regulatory_Charges__c )</inlineHelpText>
    <label>Recommended Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>