force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
            <value>
                <fullName>Enquiry gone cold</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Non-travelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>