force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Enquiry_Room_Type_Choice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Enquiry_Room_Type_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected room type for this pax on an enquiry</description>
    <inlineHelpText>The selected room type for this pax on an enquiry</inlineHelpText>
    <label>Enquiry Room Type Choice</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Enquiry Client Groups</relationshipLabel>
    <relationshipName>Enquiry_Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>