force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Price_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tells the system which price override (for different room sharing options) this client group is using.</description>
    <label>Price Override</label>
    <referenceTo>sugati__Price_Override__c</referenceTo>
    <relationshipLabel>Client Groups</relationshipLabel>
    <relationshipName>Client_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>