force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Recommended_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Recommended_Sell_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of Recommended Sell Price from Group Member</description>
    <label>Recommended Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>