force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Return_Date__c</fullName>
    <description>Used for multi-person tour bookings, where one person in a multi-person group may have post-holiday extra nights.</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>