force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Sharing_Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Sharing_Preference__c</fullName>
    <description>Contains the Ids (comma separated) of the client groups that this person wishes to share a room with.</description>
    <label>Sharing Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>