force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Additional_Costs__c</fullName>
    <label>Total Additional Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>