force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Discount__c</fullName>
    <description>The total amount of discount associated with this client group.</description>
    <inlineHelpText>The total amount of discount associated with this client group.</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>