force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Agent_Commission__c</fullName>
    <description>Sum of Total Individual Agent Commission</description>
    <label>Total Group Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>