force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Cancellation_Amount__c</fullName>
    <description>Sum of Total Individual Cancellation Amount</description>
    <label>Total Group Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>