force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Margin__c</fullName>
    <formula>sugati__S_CG_Total_Group_Profit__c /  IF(ISNULL(sugati__CG_Selling_Price__c), sugati__S_CG_Total_Group_Gross_Sell_Price__c, sugati__CG_Selling_Price__c)</formula>
    <label>Total Group Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>