force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Net_Cost__c</fullName>
    <description>Sum of Individual Net Cost</description>
    <label>Total Group Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>