force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Net_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Net_Sell_Price__c</fullName>
    <description>Sum of Individual Net Sell Price</description>
    <label>Total Group Net Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>