force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Profit__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Profit__c</fullName>
    <description>Sum of individual Profit</description>
    <label>Total Group Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>