force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Profit_Agency_Comm__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Profit_Agency_Comm__c</fullName>
    <description>Sum of Individual Profit - Agency Commission</description>
    <label>Total Group Profit - Agency Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>