force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Total_Group_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Total_Group_Sales_Tax__c</fullName>
    <description>Sum of Sales Tax</description>
    <label>Total Group Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>